--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
 
     <!-- Acá va el contenido de nuestra web -->
     <main class="main">
-
+        <div class="texto">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum explicabo non sint autem quasi temporibus?
+            Ad id fugiat ullam iure, accusantium aspernatur nesciunt sint voluptas tempora animi odit quos blanditiis.
+            Consequatur vel obcaecati repudiandae, deserunt fugiat modi expedita magni vitae, a magnam nemo laboriosam,
+            voluptatibus commodi ipsum officia eos doloribus placeat velit ab itaque quos. Dignissimos magni nihil iste
+            provident?
+        </div>
         <!-- Seccion para shop -->
         <div class="shop">
 
