--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
 
 <body>
     <header class="header">
-
-        <div class="nav-links">
-            <nav class="Menu">
-                <a class="link" href="login.html">Ingresar</a>
-                <a class="link" href="register.html">Registrarse</a>
-                <a class="link" href="tienda.html">Tienda</a>
-            </nav>
-        </div>
+        <nav class="nav-links">
+            <ul class="Menu">
+                <li><a class="link" href="login.html">Ingresar</a></li>
+                <li><a class="link" href="account.html">Mi cuenta</a>
+                    <ul class="subMenu">
+                        <li><a href="register.html">Registrarse</a></li>
+                        <li><a href="login.html">Iniciar sesión</a></li>
+                    </ul>
+                </li>
+                <li><a class="link" href="tienda.html">Tienda</a></li>
+            </ul>
+        </nav>
 
         <section id="banner" class="container">
 
