--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viveros CaC --- De todo para tu jardín</title>
+    <title>Viveros Ombú --- De todo para tu jardín</title>
     <!-- Zona CSS/Favicon-->
     <link rel="icon" href="./rsc/favicon.ico">
     <link rel="stylesheet" href="./css/style.css">
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    
 </head>
 
 <body>
@@ -32,7 +33,7 @@
 
         <section id="banner" class="container">
 
-            <h1 class="titulo">Viveros CaC</h1>
+            <h1 class="titulo">Viveros Ombú</h1>
             <div class="subt">
                 <p>Todo para tu jardín y mucho más!</p>
             </div>
