--- a/Productos.html
+++ b/Productos.html
@@ -4,38 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Ombú</title>
-    <link rel="stylesheet" href="./css/estilo.css">
-    <!--link favicon a modificar-->
-    <link rel="icon" href="./img/favicon.ico">
+    <title>Viveros Ombú --- De todo para tu jardín</title>
+    <!-- Zona CSS/Favicon-->
+    <link rel="icon" href="./rsc/favicon.ico">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Zona fonts y animaciones-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
 </head>
 
 <body>
-    <!--Encabezado-->
     <header class="header">
-
-        <nav>
-            <a href="#" class="btn-ombu"> El Ombú </a>
-            <ul class="nav-link">
-                <li><a href="Plantas">Plantas</a></li>
-                <li><a href="Productos">Productos</a></li>
-                <li><a href="#">Registro</a></li>
-                <li><a href="#">Contactos</a></li>
+        <!-- <a href="index.html" class="button">Inicio</a> -->
+        
+        <nav class="nav-links">
+            <a href="index.html" class="btn-ombu"> El Ombú </a>
+            <ul class="Menu">
+                <li><a class="link" href="nosotros.html">Nosotros</a></li>
+                <li><a class="link" href="productos.html">Nuestros Productos</a></li>
+                <li><a class="link" href="account.html">Mi cuenta</a>
+                    <ul class="subMenu">
+                        <li><a href="register.html">Registrarse</a></li>
+                        <li><a href="login.html">Iniciar sesión</a></li>
+                    </ul>
+                </li>
+                
             </ul>
         </nav>
-    </header> 
 
+        <section id="banner" class="container">
 
-    <!--contenido-->
-    <main>
-        <!--Banner--> <!-- ponemos imagen en el css-->
-        <section id="banner">
-            <div class="banner conteiner">
-                <h2> ¡Los mejores productos para tus plantas! <!--arbolito--> </h2>
+            <h1 class="titulo">Viveros Ombú</h1>
+            <div class="subt">
+                <p>Todo para tu jardín y mucho más!</p>
             </div>
-            <h2>Productos</h2>
-            <h2>¿Que necesitamos?</h2>
+
         </section>
+    </header>
+
+    <!-- Acá va el contenido de nuestra web -->
+    <!--contenido-->
+    <main class="main">
+        <!--Banner--> <!-- ponemos imagen en el css-->
+        <!-- <section id="banner"> -->
+            <!-- <div class="banner conteiner"> -->
+                <!-- <h2> ¡Los mejores productos para tus plantas! arbolito </h2> -->
+            <!-- </div> -->
+            <!-- <h2>Productos</h2> -->
+            <!-- <h2>¿Que necesitamos?</h2> -->
+        <!-- </section> -->
 
         <section class="container"> <!--ME MARCA "WARNING" EN EL VALIDATOR-->
 
