--- a/login.html
+++ b/login.html
@@ -1,58 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/login-style.css">
-    <link rel="shortcut icon" href="favicon/el-planeta-tierra.ico" type="image/x-icon">
-    <title>Iniciar Sesion</title>
+    <title>Viveros Ombú --- De todo para tu jardín</title>
+    <!-- Zona CSS/Favicon-->
+    <link rel="icon" href="./rsc/favicon.ico">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Zona fonts y animaciones-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        <!-- <a href="index.html" class="button">Inicio</a> -->
+
         <nav class="nav-links">
+            <a href="index.html" class="btn-ombu"> El Ombú </a>
             <ul class="Menu">
-                <li><a class="link" href="login.html">Ingresar</a></li>
+                <li><a class="link" href="nosotros.html">Nosotros</a></li>
+                <li><a class="link" href="productos.html">Nuestros Productos</a></li>
                 <li><a class="link" href="account.html">Mi cuenta</a>
                     <ul class="subMenu">
                         <li><a href="register.html">Registrarse</a></li>
                         <li><a href="login.html">Iniciar sesión</a></li>
                     </ul>
                 </li>
-                <li><a class="link" href="tienda.html">Tienda</a></li>
+                
             </ul>
         </nav>
+
+        <section id="banner" class="container">
+
+            <h1 class="titulo">Viveros Ombú</h1>
+            <div class="subt">
+                <p>Todo para tu jardín y mucho más!</p>
+            </div>
+
+        </section>
     </header>
 
-    <div id="container_form">
-        <div id="imagen">
-            <img src="favicon/usuario.png" alt="#">
+    <!-- Acá va el contenido de nuestra web -->
+
+    <main class="main">
+        <div id="container_form">
+            <div id="form-imagen">
+                <img src="favicon/usuario.png" alt="#">
+            </div>
+            <aside class="cuadrito">
+                <form action="#" class="">
+
+                    <div class="datos">
+                        <div class="contenedor_input">
+                            <label>Correo Electronico:</label>
+                            <input type="email" id="email" name="email" placeholder="example@example.com">
+                        </div>
+                        <div class="contenedor_input">
+                            <label for="password">Contraseña:</label>
+                            <input type="password" id="password">
+                        </div>
+
+                    </div>
+                    <div class="btn_enviar">
+                        <button type="submit">Iniciar Sesión</button>
+                    </div>
+                </form>
+            </aside>
         </div>
-        <aside class="cuadrito">
-            <form action="#" class="">
-
-                <div class="datos">
-                    <div class="contenedor_input">
-                        <label>Correo Electronico:</label>
-                        <input type="email" id="email" name="email" placeholder="example@example.com">
-                    </div>
-                    <div class="contenedor_input">
-                        <label for="password">Contraseña:</label>
-                        <input type="password" id="password">
-                    </div>
-
-                </div>
-                <div class="btn_enviar">
-                    <button type="submit">Iniciar Sesión</button>
-                </div>
-            </form>
-        </aside>
-    </div>
-    <footer class="footer">
-        <a href="#">Términos y condiciones</a>
-        <a href="#">Preguntas Frecuentes</a>
-        <a href="#">Ayuda</a>
-    </footer>
+        <!--  -->
+        <footer class="footer">
+            <div class="foot-links">
+                <a href="termcond.html">Términos y condiciones</a>
+                <a href="faq.html">Preguntas frecuentes</a>
+                <a href="help.html">Ayuda</a>
+            </div>
+            <p class="copyright">© 2024 Viveros CaC</p>
+        </footer>
+    </main>
 </body>
+
 </html>
