--- a/Productos.html
+++ b/Productos.html
@@ -163,14 +163,17 @@
 
     </main>
 
-    <footer class="footer">
-        <div class="footer-links">
-            <a href="#">Términos y condiciones</a>
-            <a href="#">Preguntas Frecuentes</a>
-            <a href="#">Ayuda</a>
-        </div>
-    </footer>
+    <!--  -->
 
+    <footer class="footer">
+        <div class="foot-links">
+            <a href="termcond.html">Términos y condiciones</a>
+            <a href="faq.html">Preguntas frecuentes</a>
+            <a href="help.html">Ayuda</a>
+            <a href="contact.html">Contáctanos!</a>
+        </div>
+        <p class="copyright">© 2024 Viveros CaC</p>
+    </footer>
 </body>
 
 </html>
