--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <!-- <a href="index.html" class="button">Inicio</a> -->
-        
+
         <nav class="nav-links">
             <a href="index.html" class="btn-ombu"> El Ombú </a>
             <ul class="Menu">
@@ -31,7 +31,7 @@
                         <li><a href="login.html">Iniciar sesión</a></li>
                     </ul>
                 </li>
-                
+
             </ul>
         </nav>
 
@@ -100,12 +100,14 @@
         </div>
     </main>
 
+    <!--  -->
+
     <footer class="footer">
         <div class="foot-links">
             <a href="termcond.html">Términos y condiciones</a>
             <a href="faq.html">Preguntas frecuentes</a>
             <a href="help.html">Ayuda</a>
-
+            <a href="contact.html">Contáctanos!</a>
         </div>
         <p class="copyright">© 2024 Viveros CaC</p>
     </footer>
