--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                         <li><a href="login.html">Iniciar sesión</a></li>
                     </ul>
                 </li>
-                
+
             </ul>
         </nav>
 
@@ -72,16 +72,20 @@
                 </form>
             </aside>
         </div>
-        <!--  -->
-        <footer class="footer">
-            <div class="foot-links">
-                <a href="termcond.html">Términos y condiciones</a>
-                <a href="faq.html">Preguntas frecuentes</a>
-                <a href="help.html">Ayuda</a>
-            </div>
-            <p class="copyright">© 2024 Viveros CaC</p>
-        </footer>
     </main>
+    
+    <!--  -->
+
+    <footer class="footer">
+        <div class="foot-links">
+            <a href="termcond.html">Términos y condiciones</a>
+            <a href="faq.html">Preguntas frecuentes</a>
+            <a href="help.html">Ayuda</a>
+            <a href="contact.html">Contáctanos!</a>
+        </div>
+        <p class="copyright">© 2024 Viveros CaC</p>
+    </footer>
+
 </body>
 
 </html>
