--- a/contact.html
+++ b/contact.html
@@ -1,107 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/contact-style.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+    <title>Viveros Ombú --- De todo para tu jardín</title>
+    <!-- Zona CSS/Favicon-->
+    <link rel="icon" href="./rsc/favicon.ico">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Zona fonts y animaciones-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="shortcut icon" href="favicon/el-planeta-tierra.ico" type="image/x-icon">
-    <title>Contacto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav class="nav-links">
+            <a href="index.html" class="btn-ombu"> El Ombú </a>
             <ul class="Menu">
-                <li><a class="link" href="login.html">Ingresar</a></li>
+                <li><a class="link" href="nosotros.html">Nosotros</a></li>
+                <li><a class="link" href="productos.html">Nuestros Productos</a></li>
                 <li><a class="link" href="account.html">Mi cuenta</a>
                     <ul class="subMenu">
                         <li><a href="register.html">Registrarse</a></li>
                         <li><a href="login.html">Iniciar sesión</a></li>
                     </ul>
                 </li>
-                <li><a class="link" href="tienda.html">Tienda</a></li>
+
             </ul>
         </nav>
+
+        <section id="banner" class="container">
+
+            <h1 class="titulo">Viveros Ombú</h1>
+            <div class="subt">
+                <p>Todo para tu jardín y mucho más!</p>
+            </div>
+
+        </section>
     </header>
 
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-                <div id="cuadrito">
+    <!-- Acá va el contenido de nuestra web -->
+
+    <main class="main">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <div id="cuadrito">
+
+                        <h2>Completa el formulario con tus datos</h2>
+                        <form action="#" class=" contacto">
+                            <div class="contenedor_input">
+                                <label for="nombre">Nombre:</label>
+                                <input type="text" id="nombre" placeholder="Nombre">
+                            </div>
+                            <div class="contenedor_input">
+                                <label for="nombre">Apellido:</label>
+                                <input type="text" id="apellido" placeholder="Apellido">
+                            </div>
+                            <div class="contenedor_input">
+                                <label for="mail">Correo:</label>
+                                <input type="email" id="mail" placeholder="example@example.com">
+                            </div>
+
+                            <div class="contenedor_input">
+                                <label>Motivo del Contacto</label>
+                                <select name="option" id="productos">
+                                    <option>Nuestros Productos</option>
+                                    <option>Reclamo y/o Queja</option>
+                                    <option>Otros</option>
+
+                                </select>
+                            </div>
+                            <div id="textarea">
+                                <label>Déjanos un mensaje:</label>
+                                <textarea name="mensaje" cols="30" rows="10" placeholder="Mensaje..."></textarea>
+
+                            </div>
+                            <div class="contenedor_aceptar">
+                                <label>Deseas recibir novedades acerca de nuestros
+                                    productos:</label>
+                                <input type="checkbox" id="checkbox" name="checkbox">
+
+                            </div>
+                            <div class="container_button">
+                                <button type="submit">Enviar</button>
+                            </div>
+                        </form>
 
 
-
-                    <h2>Completa el formulario con tus datos</h2>
-                    <form action="#" class=" contacto">
-                        <div class="contenedor_input">
-                            <label for="nombre">Nombre:</label>
-                            <input type="text" id="nombre" placeholder="Nombre">
-                        </div>
-                        <div class="contenedor_input">
-                            <label for="nombre">Apellido:</label>
-                            <input type="text" id="apellido" placeholder="Apellido">
-                        </div>
-                        <div class="contenedor_input">
-                            <label for="mail">Correo:</label>
-                            <input type="email" id="mail" placeholder="example@example.com">
-                        </div>
-
-                        <div class="contenedor_input">
-                            <label>Motivo del Contacto</label>
-                            <select name="option" id="productos">
-                                <option>Nuestros Productos</option>
-                                <option>Reclamo y/o Queja</option>
-                                <option>Otros</option>
-
-                            </select>
-                        </div>
-                        <div id="textarea">
-                            <label>Déjanos un mensaje:</label>
-                            <textarea name="mensaje" cols="30" rows="10" placeholder="Mensaje..."></textarea>
-
-                        </div>
-                        <div class="contenedor_aceptar">
-                            <label>Deseas recibir novedades acerca de nuestros
-                                productos:</label>
-                            <input type="checkbox" id="checkbox" name="checkbox">
-
-                        </div>
-                        <div class="container_button">
-                            <button type="submit">Enviar</button>
-                        </div>
-                    </form>
-
-
+                    </div>
                 </div>
-            </div>
-            <div class="col">
+                <div class="col">
 
-                <div class="subtitulo">
-                    <h2 class="subtitulos">Nuestra Ubicación</h2>
-                </div>
-                <div class="mapa">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.4178119636626!2d-58.54653700000001!3d-34.7702557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccff16e02d8b1%3A0x1d8fe58732bf68e7!2sBosques%20De%20Ezeiza!5e0!3m2!1ses!2sar!4v1712670835735!5m2!1ses!2sar"
-                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+                    <div class="subtitulo">
+                        <h2 class="subtitulos">Nuestra Ubicación</h2>
+                    </div>
+                    <div class="mapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.4178119636626!2d-58.54653700000001!3d-34.7702557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccff16e02d8b1%3A0x1d8fe58732bf68e7!2sBosques%20De%20Ezeiza!5e0!3m2!1ses!2sar!4v1712670835735!5m2!1ses!2sar"
+                            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+
                 </div>
 
             </div>
 
         </div>
+    </main>
 
-    </div>
+    <!--  -->
 
     <footer class="footer">
-        <a href="#">Términos y condiciones</a>
-        <a href="#">Preguntas Frecuentes</a>
-        <a href="#">Ayuda</a>
+        <div class="foot-links">
+            <a href="termcond.html">Términos y condiciones</a>
+            <a href="faq.html">Preguntas frecuentes</a>
+            <a href="help.html">Ayuda</a>
+            <a href="contact.html">Contáctanos!</a>
+        </div>
+        <p class="copyright">© 2024 Viveros CaC</p>
     </footer>
 </body>
 
