--- a/login.html
+++ b/login.html
@@ -29,7 +29,6 @@
                         <li><a href="login.html">Iniciar sesión</a></li>
                     </ul>
                 </li>
-
             </ul>
         </nav>
 
@@ -56,17 +55,19 @@
                     <div class="datos">
                         <div class="contenedor_input">
                             <label>Correo Electronico:</label>
-                            <input type="email" id="email" name="email" placeholder="example@example.com">
+                            <input type="email" id="email" name="email" placeholder="ejemplo@dominio.com">
                         </div>
                         <div class="contenedor_input">
                             <label for="password">Contraseña:</label>
-                            <input type="password" id="password">
+                            <input type="password" id="password" neme="password" placeholder="Contraseña">
                         </div>
-
                     </div>
+
                     <div class="btn_enviar">
                         <button type="submit">Iniciar Sesión</button>
                     </div>
+
+                    <div class="redirect-acc"><a href="register.html">¿Aún no tienes cuenta? ¡Registrate aquí!</a></div>
                 </form>
             </aside>
         </div>
