--- a/register.html
+++ b/register.html
@@ -4,92 +4,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon/el-planeta-tierra.ico" type="image/x-icon">
+    <title>Viveros Ombú --- De todo para tu jardín</title>
+    <!-- Zona CSS/Favicon-->
+    <link rel="icon" href="./rsc/favicon.ico">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Zona fonts y animaciones-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/register-style.css">
-    <title>Registro de usuario</title>
 </head>
 
 <body>
 
-    <header>
+    <header class="header">
         <nav class="nav-links">
+            <a href="index.html" class="btn-ombu"> El Ombú </a>
             <ul class="Menu">
-                <li><a class="link" href="login.html">Ingresar</a></li>
+                <li><a class="link" href="nosotros.html">Nosotros</a></li>
+                <li><a class="link" href="productos.html">Nuestros Productos</a></li>
                 <li><a class="link" href="account.html">Mi cuenta</a>
                     <ul class="subMenu">
                         <li><a href="register.html">Registrarse</a></li>
                         <li><a href="login.html">Iniciar sesión</a></li>
                     </ul>
                 </li>
-                <li><a class="link" href="tienda.html">Tienda</a></li>
+
             </ul>
         </nav>
 
+        <section id="banner" class="container">
+
+            <h1 class="titulo">Viveros Ombú</h1>
+            <div class="subt">
+                <p>Todo para tu jardín y mucho más!</p>
+            </div>
+
+        </section>
     </header>
 
-    <div id="container_form">
-        <div id="imagen">
-            <img src="favicon/usuario.png" alt="#">
+    <!-- Acá va el contenido de nuestra web -->
+
+    <main class="main">
+        <div id="container_form">
+            <div id="imagen">
+                <img src="favicon/usuario.png" alt="#">
+            </div>
+            <aside class="cuadrito">
+                <form action="#" class="">
+
+                    <div class="datos">
+
+                        <div class="contenedor_input">
+                            <label>Nombre:</label>
+                            <input type="text" id="name" name="name" placeholder="Nombre">
+                        </div>
+                        <div class="contenedor_input">
+                            <label>Apellidos:</label>
+                            <input type="text" id="surname" name="surname" placeholder="Apellidos">
+                        </div>
+                        <div class="contenedor_input">
+                            <label>Correo Electronico:</label>
+                            <input type="email" id="mail" name="email" placeholder="name@example.com">
+                        </div>
+                        <div class="contenedor_input">
+                            <label>Contraseña:</label>
+                            <input type="password" id="password">
+                        </div>
+                        <div class="contenedor_input">
+                            <label>Repite tu contraseña:</label>
+                            <input type="password">
+                        </div>
+                        <div class="contenedor_input">
+                            <label>Fecha de Nacimiento:</label>
+                            <input type="date" id="birthdate" name="birthdate">
+                        </div>
+                        <div class="contenedor_input">
+                            <label>Selecciona tu género</label>
+                            <select name="option">
+                                <option>Femenino</option>
+                                <option>Masculino</option>
+                                <option>Otro</option>
+
+                            </select>
+                        </div>
+                    </div>
+                    <div class="btn_enviar">
+                        <button type="submit">Regístrate</button>
+                    </div>
+                    <div class="redirect-acc"><a href="register.html">¿Tienes cuenta? ¡Inicia sesión!</a></div>
+
+                </form>
+            </aside>
+
         </div>
-        <aside class="cuadrito">
-            <form action="#" class="">
-
-                <div class="datos">
-
-                    <div class="contenedor_input">
-                        <label>Nombre:</label>
-                        <input type="text" id="name" name="name" placeholder="Nombre">
-                    </div>
-                    <div class="contenedor_input">
-                        <label>Apellidos:</label>
-                        <input type="text" id="surname" name="surname" placeholder="Apellidos">
-                    </div>
-                    <div class="contenedor_input">
-                        <label>Correo Electronico:</label>
-                        <input type="email" id="mail" name="email" placeholder="name@example.com">
-                    </div>
-                    <div class="contenedor_input">
-                        <label>Contraseña:</label>
-                        <input type="password" id="password">
-                    </div>
-                    <div class="contenedor_input">
-                        <label>Repite tu contraseña:</label>
-                        <input type="password">
-                    </div>
-                    <div class="contenedor_input">
-                        <label>Fecha de Nacimiento:</label>
-                        <input type="date" id="birthdate" name="birthdate">
-                    </div>
-                    <div class="contenedor_input">
-                        <label>Selecciona tu género</label>
-                        <select name="option">
-                            <option>Femenino</option>
-                            <option>Masculino</option>
-                            <option>Otro</option>
-
-                        </select>
-                    </div>
-                </div>
-                <div class="btn_enviar">
-                    <button type="submit">Regístrate</button>
-                </div>
-            </form>
-        </aside>
-
-    </div>
-
+    </main>
+    <!--  -->
 
     <footer class="footer">
-
-        <a href="#">Términos y condiciones</a>
-        <a href="#">Preguntas Frecuentes</a>
-        <a href="#">Ayuda</a>
-
+        <div class="foot-links">
+            <a href="termcond.html">Términos y condiciones</a>
+            <a href="faq.html">Preguntas frecuentes</a>
+            <a href="help.html">Ayuda</a>
+            <a href="contact.html">Contáctanos!</a>
+        </div>
+        <p class="copyright">© 2024 Viveros CaC</p>
     </footer>
+
 </body>
 
 </html>
