--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
     <main class="main">
         <div id="container_form">
             <div id="imagen">
-                <img src="favicon/usuario.png" alt="#">
+                <img class="user" src="favicon/usuario.png" alt="#">
             </div>
             <aside class="cuadrito">
                 <form action="#" class="">
