--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
     <main class="main">
         <div id="container_form">
             <div id="form-imagen">
-                <img src="favicon/usuario.png" alt="#">
+                <img class="user" src="favicon/usuario.png" alt="#">
             </div>
             <aside class="cuadrito">
                 <form action="#" class="">
