--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -31,7 +31,6 @@
         </div>
         <aside class="cuadrito">
             <form action="#" class="">
-
                 <div class="datos">
                     <div class="contenedor_input">
                         <label>Correo Electronico:</label>
@@ -41,12 +40,19 @@
                         <label for="password">Contraseña:</label>
                         <input type="password" id="password">
                     </div>
-
                 </div>
                 <div class="btn_enviar">
                     <button type="submit">Iniciar Sesión</button>
                 </div>
             </form>
+            <div class="container_register">
+                <div>
+                    <label>¿Aún no tienes cuenta?</label>
+                </div>
+                <div>
+                    <a href="./register.html">¡Registrate aquí!</a>
+                </div>
+            </div>
         </aside>
     </div>
     <footer class="footer">
@@ -55,4 +61,5 @@
         <a href="#">Ayuda</a>
     </footer>
 </body>
+
 </html>
