--- a/register.html
+++ b/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -37,9 +37,7 @@
         </div>
         <aside class="cuadrito">
             <form action="#" class="">
-
                 <div class="datos">
-
                     <div class="contenedor_input">
                         <label>Nombre:</label>
                         <input type="text" id="name" name="name" placeholder="Nombre">
@@ -78,6 +76,14 @@
                     <button type="submit">Regístrate</button>
                 </div>
             </form>
+            <div class="container_login">
+                <div>
+                    <label>¿Tienes cuenta?</label>
+                </div>
+                <div>
+                    <a href="login.html">¡Inicia sesión!</a>
+                </div>
+            </div>
         </aside>
 
     </div>
