--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <title>Viveros Ombú --- De todo para tu jardín</title>
     <!-- Zona CSS/Favicon-->
     <link rel="icon" href="./rsc/favicon.ico">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/register-style.css">
     <!-- Zona fonts y animaciones-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,60 +46,11 @@
     </header>
 
     <!-- Acá va el contenido de nuestra web -->
-
-    <main class="main">
-        <div id="container_form">
-            <div id="imagen">
-                <img class="user" src="favicon/usuario.png" alt="#">
-            </div>
-            <aside class="cuadrito">
-                <form action="#" class="">
-
-                    <div class="datos">
-
-                        <div class="contenedor_input">
-                            <label>Nombre:</label>
-                            <input type="text" id="name" name="name" placeholder="Nombre">
-                        </div>
-                        <div class="contenedor_input">
-                            <label>Apellidos:</label>
-                            <input type="text" id="surname" name="surname" placeholder="Apellidos">
-                        </div>
-                        <div class="contenedor_input">
-                            <label>Correo Electronico:</label>
-                            <input type="email" id="mail" name="email" placeholder="name@example.com">
-                        </div>
-                        <div class="contenedor_input">
-                            <label>Contraseña:</label>
-                            <input type="password" id="password">
-                        </div>
-                        <div class="contenedor_input">
-                            <label>Repite tu contraseña:</label>
-                            <input type="password">
-                        </div>
-                        <div class="contenedor_input">
-                            <label>Fecha de Nacimiento:</label>
-                            <input type="date" id="birthdate" name="birthdate">
-                        </div>
-                        <div class="contenedor_input">
-                            <label>Selecciona tu género</label>
-                            <select name="option">
-                                <option>Femenino</option>
-                                <option>Masculino</option>
-                                <option>Otro</option>
-
-                            </select>
-                        </div>
-                    </div>
-                    <div class="btn_enviar">
-                        <button type="submit">Regístrate</button>
-                    </div>
-                    <div class="redirect-acc"><a href="register.html">¿Tienes cuenta? ¡Inicia sesión!</a></div>
-
-                </form>
-            </aside>
-
+    <div id="container_form">
+        <div id="imagen">
+            <img class="user" src="favicon/usuario.png" alt="#">
         </div>
+
         <aside class="cuadrito">
             <form action="#" class="">
                 <div class="datos">
@@ -153,15 +104,11 @@
 
     </div>
 
-
     <footer class="footer">
-        <div class="foot-links">
-            <a href="termcond.html">Términos y condiciones</a>
-            <a href="faq.html">Preguntas frecuentes</a>
-            <a href="help.html">Ayuda</a>
-            <a href="contact.html">Contáctanos!</a>
-        </div>
-        <p class="copyright">© 2024 Viveros CaC</p>
+
+        <a href="#">Términos y condiciones</a>
+        <a href="#">Preguntas Frecuentes</a>
+        <a href="#">Ayuda</a>
     </footer>
 
 </body>
