--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
     <main class="main">
         <div id="container_form">
             <div id="imagen">
-                <img class="user" src="favicon/usuario.png" alt="#">
+                <img class="user" src="rsc/user.png" alt="#">
             </div>
             <aside class="cuadrito">
                 <form action="#" class="">
@@ -82,19 +82,18 @@
                             <input type="date" id="birthdate" name="birthdate">
                         </div>
                         <div class="contenedor_input">
-                            <label>Selecciona tu género</label>
+                            <label>Género</label>
                             <select name="option">
                                 <option>Femenino</option>
                                 <option>Masculino</option>
                                 <option>Otro</option>
-
                             </select>
                         </div>
                     </div>
                     <div class="btn_enviar">
                         <button type="submit">Regístrate</button>
                     </div>
-                    <div class="redirect-acc"><a href="register.html">¿Tienes cuenta? ¡Inicia sesión!</a></div>
+                    <div class="redirect-acc"><a href="login.html">¿Tienes cuenta? ¡Inicia sesión!</a></div>
 
                 </form>
             </aside>
