--- a/register.html
+++ b/register.html
@@ -67,11 +67,11 @@
                         </div>
                         <div class="contenedor_input">
                             <label>Correo Electronico:</label>
-                            <input type="email" id="mail" name="email" placeholder="name@example.com">
+                            <input type="email" id="mail" name="email" placeholder="ejemplo@dominio.com">
                         </div>
                         <div class="contenedor_input">
                             <label>Contraseña:</label>
-                            <input type="password" id="password">
+                            <input type="password" id="password" name="password" placeholder="Contraseña">
                         </div>
                         <div class="contenedor_input">
                             <label>Repite tu contraseña:</label>
