--- a/nosotros.html
+++ b/nosotros.html
@@ -46,7 +46,36 @@
     <!-- Acá va el contenido de nuestra web -->
 
     <main class="main">
+        <div class="container">
+            <div class="text">
+                <h1>Quiénes Somos</h1>
+                <h3>Nosotros nos inspiramos en la naturaleza y en sus cuidados, y es por eso que nuestro objetivo es
+                    brindarte todos
+                    los recursos necesarios garantizandote un acercamiento más a la naturaleza para tu hogar, oficinas o
+                    en
+                    donde más te guste.
+                </h3>
+                <h3>Contamos con variedad de flores, y todo tipo de recursos para brindarle el cuidado y amor que cada
+                    planta necesita.</h3>
+            </div>
 
+            <div class="equipo">
+                <h1>Nuestro Equipo</h1>
+                <h3>Somos especializados con los más altos estandares en articulos de jardinería desde el año 2001.
+                    También
+                    comercializamos todo lo relacionado con fertilizantes, tierra, plaguicidas, abonos y mucho más.
+                </h3>
+            </div>
+            <div class="calidad">
+                <h1>La calidad que tú buscabas</h1>
+                <h3>Los clientes nos recomiendan por la atención personalizada, por la calidad de nuestros productos y
+                    por
+                    la comodidad para llegar a nuestra sucursal. </h3>
+            </div>
+            <div class="container_img">
+                <img src="images/vivero.jpg" alt="img">
+            </div>
+        </div>
     </main>
 
     <!--  -->
