--- a/nosotros.html
+++ b/nosotros.html
@@ -80,8 +80,8 @@
                     por
                     la comodidad para llegar a nuestra sucursal. </h3>
             </div>
-            <div class="container_img">
-                <img src="images/vivero.jpg" alt="img">
+            <div class="container-img">
+                <img src="./rsc/vivero.jpg" alt="img">
             </div>
         </section>
     </main>
