--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="Menu">
                 <li><a class="link" href="nosotros.html">Nosotros</a></li>
                 <li><a class="link" href="productos.html">Nuestros Productos</a></li>
-                <li><a class="link" href="account.html">Mi cuenta</a>
+                <li><a class="link" href="#">Mi cuenta</a>
                     <ul class="subMenu">
                         <li><a href="register.html">Registrarse</a></li>
                         <li><a href="login.html">Iniciar sesión</a></li>
@@ -46,13 +46,21 @@
     <!-- Acá va el contenido de nuestra web -->
 
     <main class="main">
-        <div class="texto">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum explicabo non sint autem quasi temporibus?
-            Ad id fugiat ullam iure, accusantium aspernatur nesciunt sint voluptas tempora animi odit quos blanditiis.
-            Consequatur vel obcaecati repudiandae, deserunt fugiat modi expedita magni vitae, a magnam nemo laboriosam,
-            voluptatibus commodi ipsum officia eos doloribus placeat velit ab itaque quos. Dignissimos magni nihil iste
-            provident?
-        </div>
+        <section class="container-intro">
+            <div class="intro">
+                <br>
+                <h1>¡Tenemos de todo para tu jardín!</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum explicabo non sint autem quasi
+                temporibus?
+                Ad id fugiat ullam iure, accusantium aspernatur nesciunt sint voluptas tempora animi odit quos
+                blanditiis.
+                Consequatur vel obcaecati repudiandae, deserunt fugiat modi expedita magni vitae, a magnam nemo
+                laboriosam,
+                voluptatibus commodi ipsum officia eos doloribus placeat velit ab itaque quos. Dignissimos magni nihil
+                iste
+                provident?</p>
+            </div>
+        </section>
         <!-- Seccion para shop -->
         <div class="shop">
 
