--- a/nosotros.html
+++ b/nosotros.html
@@ -23,7 +23,7 @@
             <ul class="Menu">
                 <li><a class="link" href="nosotros.html">Nosotros</a></li>
                 <li><a class="link" href="productos.html">Nuestros Productos</a></li>
-                <li><a class="link" href="account.html">Mi cuenta</a>
+                <li><a class="link" href="#">Mi cuenta</a>
                     <ul class="subMenu">
                         <li><a href="register.html">Registrarse</a></li>
                         <li><a href="login.html">Iniciar sesión</a></li>
@@ -46,7 +46,8 @@
     <!-- Acá va el contenido de nuestra web -->
 
     <main class="main">
-        <section class="container-aboutus">
+        <section class="container-text">
+            <br>
             <div class="text">
                 <h1>Quiénes Somos</h1>
                 <br>
@@ -60,9 +61,8 @@
                     planta necesita.</h3>
             </div>
             <br>
-            <br>
-            <br>
-            <div class="equipo">
+            <div class="text">
+                <br>
                 <h1>Nuestro Equipo</h1>
                 <br>
                 <h3>Somos especializados con los más altos estandares en articulos de jardinería desde el año 2001.
@@ -71,9 +71,8 @@
                 </h3>
             </div>
             <br>
-            <br>
-            <br>
-            <div class="calidad">
+            <div class="text">
+                <br>
                 <h1>La calidad que tú buscabas</h1>
                 <br>
                 <h3>Los clientes nos recomiendan por la atención personalizada, por la calidad de nuestros productos y
