--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
             <ul class="Menu">
                 <li><a class="link" href="nosotros.html">Nosotros</a></li>
                 <li><a class="link" href="productos.html">Nuestros Productos</a></li>
-                <li><a class="link" href="account.html">Mi cuenta</a>
+                <li><a class="link" href="#">Mi cuenta</a>
                     <ul class="subMenu">
                         <li><a href="register.html">Registrarse</a></li>
                         <li><a href="login.html">Iniciar sesión</a></li>
