--- a/faq.html
+++ b/faq.html
@@ -46,7 +46,25 @@
     <!-- Acá va el contenido de nuestra web -->
 
     <main class="main">
-
+        <section class="container-text">
+            <div class="text">
+                <br>
+                <h1>Preguntas frecuentes</h1>
+                <br>
+                <h2>¿Lorem ipsum dolor sit amet consectetur adipisicing elit?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, inventore veniam! Reiciendis qui maxime exercitationem dolore? Deleniti saepe magni architecto sequi officiis veniam natus repellat?</p>
+                <h2>¿Lorem ipsum dolor sit amet?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque at saepe laborum obcaecati nostrum voluptatum!</p>
+                <h2>¿Lorem ipsum dolor sit amet consectetur adipisicing.?</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque provident nihil, unde tempora id laboriosam.</p>
+                <h2>¿Lorem ipsum dolor sit amet consectetur adipisicing.?</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <h2>¿Lorem ipsum dolor sit amet consectetur adipisicing.?</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat eligendi tempora incidunt, porro iusto et, officiis eaque aliquam labore voluptatum laudantium dolores ullam, ut qui!</p>
+                <h2>¿Lorem ipsum dolor sit amet consectetur adipisicing.?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae assumenda ea nostrum maxime ab at similique dolore velit, iure perspiciatis quam facere, rem voluptas autem incidunt repellat quaerat, animi distinctio!</p>
+            </div>
+        </section>
     </main>
 
     <!--  -->
