--- a/plantas.html
+++ b/plantas.html
@@ -47,9 +47,14 @@
             <br>
             <button type="submit">Enviar</button>
         </form>
-        <footer>
-            <a href="Index.html">Ir a pagina principal</a>
-            <p>Copyright 2024</p>
+        
+        <footer class="footer">
+            <div class="foot-links">
+                <a href="termcond.html">Términos y condiciones</a>
+                <a href="faq.html">Preguntas frecuentes</a>
+                <a href="contact.html">Contáctanos!</a>
+            </div>
+            <p class="copyright">© 2024 Viveros CaC</p>
         </footer>
     </body>
 </html>
