--- a/Productos.html
+++ b/Productos.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body class="grid-container">
     <header class="header">
         <nav class="nav-links">
             <a href="index.html" class="btn-ombu"> El Ombú </a>
@@ -94,7 +94,7 @@
                         quaerat nemo. Aliquam, consectetur facere.</P>
                 </div>
             </div>
-            
+
             <!--Cuarto procucto-->
             <div class="Pr-container">
                 <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
