--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body class="grid-container">
 
     <header class="header">
         <nav class="nav-links">
