--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body>
+<body class="grid-container">
     <header class="header">
         <nav class="nav-links">
             <a href="index.html" class="btn-ombu"> El Ombú </a>
