--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body class="grid-container">
     <header class="header">
         <nav class="nav-links">
             <a href="index.html" class="btn-ombu"> El Ombú </a>
