--- a/termcond.html
+++ b/termcond.html
@@ -46,7 +46,13 @@
     <!-- Acá va el contenido de nuestra web -->
 
     <main class="main">
-
+        
+        <p>Un parrafito</p>
+        <p>Un parrafito</p>
+        <p>Un parrafito</p>
+        <p>Un parrafito</p>
+        <p>Un parrafito</p>
+        
     </main>
 
     <!--  -->
