--- a/Productos.html
+++ b/Productos.html
@@ -54,14 +54,18 @@
         <!-- <h2>¿Que necesitamos?</h2> -->
         <!-- </section> -->
 
-        <section class="container"> <!--ME MARCA "WARNING" EN EL VALIDATOR-->
+                <div class="container-text">
+                    <h2 class="texto">Aquí encontrarás<br>¡Todos nuestros productos!</h2>
+                </div>
+
+        <div class="shop"> <!--ME MARCA "WARNING" EN EL VALIDATOR-->
 
             <!-- Primer producto -->
-            <div class="Pr-container">
-                <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
-                <div class="Producto-detail">
-                    <p class="Producto-titel">Producto 1</p>
-                    <P class="Producto-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
+            <div class="elemento-container">
+                <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Producto 1</p>
+                    <P class="elemento-descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
                         numquam
                         ipsa saepe sapiente fuga, quibusdam quae. Asperiores similique dolorem rerum in error laborum
                         quae
@@ -70,11 +74,11 @@
             </div>
 
             <!---Segundo producto-->
-            <div class="Pr-container">
-                <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
-                <div class="Producto-detail">
-                    <p class="Producto-titel">Producto 1</p>
-                    <P class="Producto-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
+            <div class="elemento-container">
+                <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Producto 1</p>
+                    <P class="elemento-descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
                         numquam
                         ipsa saepe sapiente fuga, quibusdam quae. Asperiores similique dolorem rerum in error laborum
                         quae
@@ -83,11 +87,11 @@
             </div>
 
             <!--Tercer producto-->
-            <div class="Pr-container">
-                <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
-                <div class="Producto-detail">
-                    <p class="Producto-titel">Producto 1</p>
-                    <P class="Producto-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
+            <div class="elemento-container">
+                <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Producto 1</p>
+                    <P class="elemento-descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
                         numquam
                         ipsa saepe sapiente fuga, quibusdam quae. Asperiores similique dolorem rerum in error laborum
                         quae
@@ -96,25 +100,27 @@
             </div>
 
             <!--Cuarto procucto-->
-            <div class="Pr-container">
-                <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
-                <div class="Producto-detail">
-                    <p class="Producto-titel">Producto 1</p>
-                    <P class="Producto-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
+            <div class="elemento-container">
+                <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Producto 1</p>
+                    <P class="elemento-descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
                         numquam
                         ipsa saepe sapiente fuga, quibusdam quae. Asperiores similique dolorem rerum in error laborum
                         quae
                         quaerat nemo. Aliquam, consectetur facere.</P>
                 </div>
             </div>
-        </section>
-        <section class="container">
+        </div>
+
+
+        <div class="shop">
             <!--Quinto producto -->
-            <div class="Pr-container">
-                <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
-                <div class="Producto-detail">
-                    <p class="Producto-titel">Producto 2</p>
-                    <P class="Producto-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
+            <div class="elemento-container">
+                <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Producto 2</p>
+                    <P class="elemento-descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
                         numquam
                         ipsa saepe sapiente fuga, quibusdam quae. Asperiores similique dolorem rerum in error laborum
                         quae
@@ -122,11 +128,11 @@
                 </div>
             </div>
             <!--Sexto Procucto-->
-            <div class="Pr-container">
-                <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
-                <div class="Producto-detail">
-                    <p class="Producto-titel">Producto 2</p>
-                    <P class="Producto-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
+            <div class="elemento-container">
+                <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Producto 2</p>
+                    <P class="elemento-descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
                         numquam
                         ipsa saepe sapiente fuga, quibusdam quae. Asperiores similique dolorem rerum in error laborum
                         quae
@@ -134,11 +140,11 @@
                 </div>
             </div>
             <!--Septimo producto-->
-            <div class="Pr-container">
-                <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
-                <div class="Producto-detail">
-                    <p class="Producto-titel">Producto 1</p>
-                    <P class="Producto-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
+            <div class="elemento-container">
+                <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Producto 2</p>
+                    <P class="elemento-descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
                         numquam
                         ipsa saepe sapiente fuga, quibusdam quae. Asperiores similique dolorem rerum in error laborum
                         quae
@@ -146,18 +152,18 @@
                 </div>
             </div>
             <!--Octavo producto-->
-            <div class="Pr-container">
-                <img src="./img/imagen1.jpg" alt="" class="Prod-imagen">
-                <div class="Producto-detail">
-                    <p class="Producto-titel">Producto 1</p>
-                    <P class="Producto-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
+            <div class="elemento-container">
+                <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Producto 2</p>
+                    <P class="elemento-descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum vel
                         numquam
                         ipsa saepe sapiente fuga, quibusdam quae. Asperiores similique dolorem rerum in error laborum
                         quae
                         quaerat nemo. Aliquam, consectetur facere.</P>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
 
     <!--  -->
