--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
             </div>
         </section>
         <!-- Seccion para shop -->
-        <div class="shop">
 
+        <div class="container-text"><h2 class="texto">Algunas de nuestras ofertas</h2></div>
+        <div class="shop">
             <!-- Primer elemento -->
-            <div class="elemento container">
+            <div class="elemento-container">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
-                <div class="elemento-descripcion">
+                <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
                     <p class="elemento-precio"> Precio $999.999</p>
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA! <br>EN CUOTAS!</p>
@@ -75,9 +76,9 @@
             </div>
 
             <!-- Segundo elemento -->
-            <div class="elemento container">
+            <div class="elemento-container">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
-                <div class="elemento-descripcion">
+                <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
                     <p class="elemento-precio"> Precio $999.999</p>
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
@@ -85,9 +86,9 @@
             </div>
 
             <!-- Tercer elemento -->
-            <div class="elemento container">
+            <div class="elemento-container">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
-                <div class="elemento-descripcion">
+                <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
                     <p class="elemento-precio"> Precio $999.999</p>
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA!<br>EN EFECTIVO!</p>
@@ -95,9 +96,9 @@
             </div>
 
             <!-- Cuatro elemento -->
-            <div class="elemento container">
+            <div class="elemento-container">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
-                <div class="elemento-descripcion">
+                <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
                     <p class="elemento-precio"> Precio $999.999</p>
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
